--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple node/express rest-api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --recursive './test/**/*.js' --timeout 5000",
     "start": "nodemon app.js"
   },
   "author": "Jimmy Castex",
@@ -19,6 +19,9 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "nodemon": "^2.0.7",
+    "sinon": "^10.0.0"
   }
 }
